<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_movies"
        android:icon="@drawable/ic_movies"
        android:title="@string/movies" />
    <item
        android:id="@+id/nav_tv"
        android:icon="@drawable/ic_tv"
        android:title="@string/tv_shows" />
    <item
        android:id="@+id/nav_fav"
        android:icon="@drawable/fav"
        android:title="@string/favorite" />

</menu>