...
                        android:fontFamily="@font/porkys"
                        android:text="@string/app_name"
                        android:textColor="@color/red"
                        android:textSize="24sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_fav_movies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:itemCount="15"
                        tools:listitem="@layout/items_row" />
...
                        android:fontFamily="@font/porkys"
                        android:text="TvShowAja"
                        android:textColor="@color/red"
                        android:textSize="24sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_fav_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:itemCount="15"
                        tools:listitem="@layout/items_row" />
...
