...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_20sdp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:spanCount="3"
                        tools:itemCount="15"
                        tools:listitem="@layout/items_row" />
...
